--- a/.gitignore
+++ b/.gitignore
@@ -145,3 +145,5 @@ cython_debug/
 # Updated in commit 23 - 2025-04-05 14:41:27
 
 # Updated in commit 7 - 2025-04-05 15:27:37
+
+# Updated in commit 15 - 2025-04-05 15:27:37
