--- a/.gitignore
+++ b/.gitignore
@@ -157,3 +157,5 @@ cython_debug/
 # Updated in commit 23 - 2025-04-05 16:05:58
 
 # Updated in commit 7 - 2025-04-05 17:11:15
+
+# Updated in commit 15 - 2025-04-05 17:11:15
