--- a/.gitignore
+++ b/.gitignore
@@ -153,3 +153,5 @@ cython_debug/
 # Updated in commit 7 - 2025-04-05 16:05:57
 
 # Updated in commit 15 - 2025-04-05 16:05:57
+
+# Updated in commit 23 - 2025-04-05 16:05:58
